--- a/Game/App.xaml
+++ b/Game/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Game"
-             StartupUri="/Windows/GameWindow.xaml">
+             StartupUri="/Windows/LevelChooseWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
